<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.reinfo</groupId>
	<artifactId>lfh-parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<!-- 版本配置 -->
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<jdk.version>1.8</jdk.version>

		<javaee.version>7.0</javaee.version>

		<!-- common libs -->
		<commons-httpclient.version>3.1</commons-httpclient.version>
		<fileupload.version>1.3.3</fileupload.version>
		<commons-lang3.version>3.3.2</commons-lang3.version>
		<commons-lang.version>2.6</commons-lang.version>
		<log4j.version>1.2.17</log4j.version>
		<slf4j.version>1.7.25</slf4j.version>

		<spring.data.redis.version>2.0.8.RELEASE</spring.data.redis.version><!--1.8.7.RELEASE -->
		<servlet-api.version>6.0.37</servlet-api.version>
		<jsp-api.version>6.0.37</jsp-api.version>

		<httpclient.version>4.5.2</httpclient.version>
		<httpasyncclient.version>4.1.2</httpasyncclient.version>
		<httpcore.version>4.4.4</httpcore.version>

		<proxool.version>0.9.1</proxool.version>

		<json.path.version>0.8.1</json.path.version>
		<fastjson.version>1.2.4</fastjson.version>
		<!-- mySql -->
		<mysql.verson>5.1.6</mysql.verson>
		<!-- frameworks -->
		<org.springframework.version>4.0.4.RELEASE</org.springframework.version>

		<javassist.version>3.12.1.GA</javassist.version>
		<dubbo.version>2.6.0</dubbo.version>
		<netty.version>3.2.5.Final</netty.version>

		<xmemcached_version>1.3.6</xmemcached_version>
		<jedis.version>2.9.0</jedis.version>
		<zookeeper.version>3.4.6</zookeeper.version>
		<zkclient.version>0.4</zkclient.version>
		<mongo.spring.version>1.10.4.RELEASE</mongo.spring.version>
		<mongo.java.driver.version>3.4.2</mongo.java.driver.version>

		<protobuf.version>3.0.0-alpha-3.1</protobuf.version>
		<protobuf.java.format.version>1.2</protobuf.java.format.version>

		<jsoup.version>1.7.3</jsoup.version>
		<xpath.version>2.2</xpath.version>
		<dom4j.version>1.6.1</dom4j.version>
		<perf4j.version>0.9.16</perf4j.version>

		<cache-api.version>0.4</cache-api.version>
		<jboss.version>3.0.7.Final</jboss.version>
		<tomcat-embed-core.version>9.0.16</tomcat-embed-core.version>
		<tomcat-embed-logging-juli.version>8.0.11</tomcat-embed-logging-juli.version>
		<kryo.version>2.24.0</kryo.version>
		<kryo-serializers.version>0.26</kryo-serializers.version>
		<fst.version>1.55</fst.version>
		<poi.version>3.17</poi.version>

		<jna.version>4.5.0</jna.version>

		<oss.version>2.5.0</oss.version>
		<!-- Log libs -->
		<slf4j.version>1.7.25</slf4j.version>
		<jcl.version>1.1</jcl.version>
		<log4j.version>1.2.16</log4j.version>
		<logback.version>1.2.2</logback.version>
		<xml-apis.version>1.4.01</xml-apis.version>

		<!-- Test libs -->
		<junit.version>4.10</junit.version>
		<easymock.version>3.0</easymock.version>
		<jmockit.version>0.999.8</jmockit.version>
		<!-- Build args -->
		<argline>-server -Xms64m -Xmx256m -XX:PermSize=64m
			-XX:MaxPermSize=128m -Dfile.encoding=UTF-8
			-Djava.net.preferIPv4Stack=true</argline>
		<skip_maven_deploy>false</skip_maven_deploy>
		<updateReleaseInfo>true</updateReleaseInfo>
		<project.build.sourceEncoding>${file_encoding}</project.build.sourceEncoding>
		<profile.name>oss</profile.name>

		<!-- for maven compiler plugin -->
		<maven_compiler_plugin_version>3.5.1</maven_compiler_plugin_version>
		<java_source_version>1.6</java_source_version>
		<java_target_version>1.6</java_target_version>
		<file_encoding>UTF-8</file_encoding>

	</properties>

	<!-- 设定主仓库，按设定顺序进行查找。 -->
	<!-- 如有Nexus私服, 取消注释并指向正确的服务器地址. -->
	<repositories>
		<repository>
			<id>nexus-repos</id>
			<name>Team Nexus Repository</name>
			<url>http://120.79.42.164:8081/nexus/content/groups/public</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>

	<!-- 将当前项目打包的jar上传私服，则要在需要上传的工程中的pom.xml文件添加 -->
	<distributionManagement>
		<repository>
			<id>release</id>
			<name>Release Repository</name>
			<url>http://120.79.42.164:8081/nexus/content/repositories/releases</url>
		</repository>
		<snapshotRepository>
			<id>snapshot</id>
			<name>Snapshot Repository</name>
			<url>http://120.79.42.164:8081/nexus/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>
	<dependencyManagement>
		<dependencies>
			<!-- 第三方jar私服 -->
			<dependency>
				<groupId>com.cloopen</groupId>
				<artifactId>CCP_REST_SMS_SDK_JAVA</artifactId>
				<version>v2.6.3r</version>
			</dependency>
			<dependency>
				<groupId>net.sourceforge.htmlcleaner</groupId>
				<artifactId>htmlcleaner</artifactId>
				<version>${xpath.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jsoup</groupId>
				<artifactId>jsoup</artifactId>
				<version>${jsoup.version}</version>
			</dependency>

			<!-- poi -->
			<dependency>
				<groupId>org.apache.poi</groupId>
				<artifactId>poi</artifactId>
				<version>${poi.version}</version>
			</dependency>

			<!-- Common Dependency Begin -->
			<dependency>
				<groupId>com.jayway.jsonpath</groupId>
				<artifactId>json-path</artifactId>
				<version>${json.path.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-httpclient</groupId>
				<artifactId>commons-httpclient</artifactId>
				<version>${commons-httpclient.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-fileupload</groupId>
				<artifactId>commons-fileupload</artifactId>
				<version>${fileupload.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>${commons-lang3.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>${commons-lang.version}</version>
			</dependency>
			<dependency>
				<groupId>javax</groupId>
				<artifactId>javaee-api</artifactId>
				<version>${javaee.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-codec</groupId>
				<artifactId>commons-codec</artifactId>
				<version>1.9</version>
			</dependency>
			<dependency>
				<groupId>dom4j</groupId>
				<artifactId>dom4j</artifactId>
				<version>${dom4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.perf4j</groupId>
				<artifactId>perf4j</artifactId>
				<version>${perf4j.version}</version>
			</dependency>

			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>${log4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>${slf4j.version}</version>
			</dependency>

			<dependency>
				<groupId>javassist</groupId>
				<artifactId>javassist</artifactId>
				<version>${javassist.version}</version>
			</dependency>
			<dependency>
				<groupId>com.alibaba</groupId>
				<artifactId>fastjson</artifactId>
				<version>${fastjson.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jboss.netty</groupId>
				<artifactId>netty</artifactId>
				<version>${netty.version}</version>
			</dependency>
			<dependency>
				<groupId>redis.clients</groupId>
				<artifactId>jedis</artifactId>
				<version>${jedis.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jboss.resteasy</groupId>
				<artifactId>resteasy-jaxrs</artifactId>
				<version>${jboss.version}</version>
				<exclusions>
					<exclusion>
						<groupId>org.apache.httpcomponents</groupId>
						<artifactId>httpclient</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.jboss.resteasy</groupId>
				<artifactId>resteasy-client</artifactId>
				<version>${jboss.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jboss.resteasy</groupId>
				<artifactId>resteasy-netty</artifactId>
				<version>${jboss.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jboss.resteasy</groupId>
				<artifactId>resteasy-jdk-http</artifactId>
				<version>${jboss.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jboss.resteasy</groupId>
				<artifactId>resteasy-jackson-provider</artifactId>
				<version>${jboss.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jboss.resteasy</groupId>
				<artifactId>resteasy-jaxb-provider</artifactId>
				<version>${jboss.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.tomcat.embed</groupId>
				<artifactId>tomcat-embed-core</artifactId>
				<version>${tomcat-embed-core.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.tomcat.embed</groupId>
				<artifactId>tomcat-embed-logging-juli</artifactId>
				<version>${tomcat-embed-logging-juli.version}</version>
			</dependency>
			<dependency>
				<groupId>com.esotericsoftware.kryo</groupId>
				<artifactId>kryo</artifactId>
				<version>${kryo.version}</version>
			</dependency>
			<!-- Common Dependency End -->


			<!-- Zookeeper 用于分布式服务管理 -->
			<dependency>
				<groupId>org.apache.zookeeper</groupId>
				<artifactId>zookeeper</artifactId>
				<version>${zookeeper.version}</version>
				<exclusions>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>slf4j-log4j12</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>com.101tec</groupId>
				<artifactId>zkclient</artifactId>
				<version>${zkclient.version}</version>
			</dependency>
			<!-- Zookeeper 用于分布式服务管理 end -->

			<!-- Others Begin -->
			<dependency>
				<groupId>org.apache.tomcat</groupId>
				<artifactId>servlet-api</artifactId>
				<version>${servlet-api.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.tomcat</groupId>
				<artifactId>jsp-api</artifactId>
				<version>${jsp-api.version}</version>
			</dependency>

			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpclient</artifactId>
				<version>${httpclient.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpasyncclient</artifactId>
				<version>${httpasyncclient.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.httpcomponents</groupId>
				<artifactId>httpcore</artifactId>
				<version>${httpcore.version}</version>
			</dependency>
			<!-- Others End -->

			<!-- kafka -->
			<dependency>
				<groupId>org.apache.kafka</groupId>
				<artifactId>kafka_2.10</artifactId>
				<version>${kafka.version}</version>
				<exclusions>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>slf4j-simple</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>slf4j-log4j12</artifactId>
					</exclusion>
				</exclusions>
			</dependency>

			<!-- Log libs -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>commons-logging</groupId>
				<artifactId>commons-logging-api</artifactId>
				<version>${jcl.version}</version>
			</dependency>
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>${log4j.version}</version>
			</dependency>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>${logback.version}</version>
			</dependency>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
			</dependency>
			<dependency>
				<groupId>xml-apis</groupId>
				<artifactId>xml-apis</artifactId>
				<version>${xml-apis.version}</version>
			</dependency>
			<!-- Test libs -->
			<dependency>
				<groupId>org.easymock</groupId>
				<artifactId>easymock</artifactId>
				<version>${easymock.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>com.googlecode.jmockit</groupId>
				<artifactId>jmockit</artifactId>
				<version>${jmockit.version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.easymock</groupId>
				<artifactId>easymockclassextension</artifactId>
				<version>${easymock.version}</version>
				<scope>test</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymock</artifactId>
		</dependency>
		<dependency>
			<groupId>org.easymock</groupId>
			<artifactId>easymockclassextension</artifactId>
		</dependency>
		<dependency>
			<groupId>com.googlecode.jmockit</groupId>
			<artifactId>jmockit</artifactId>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<!-- Compiler 插件, 设定JDK版本 -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
					<showWarnings>true</showWarnings>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<addMavenDescriptor>true</addMavenDescriptor>
						<index>true</index>
						<manifest>
							<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<configuration>
					<skip>${skip_maven_deploy}</skip>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<modules>
		<module>lfh-app</module>
		<module>lfh-common</module>
		<module>lfh-module</module>
	</modules>
</project>